DEX-24111 | fix: banner on mobile resolutions

--- a/_src-lp/blocks/banner-with-cards/banner-with-cards.scss
+++ b/_src-lp/blocks/banner-with-cards/banner-with-cards.scss
@@ -565,6 +565,15 @@
   .section.banner-with-cards-container.trial-banner .banner-with-cards-wrapper .banner-with-cards .hasProds > div:first-child p:last-of-type{
     width: unset;
   }
+
+  .section.banner-with-cards-container.rounded .banner-with-cards {
+    background: none !important;
+    margin-left: 0;
+  }
+
+  .section.banner-with-cards-container.rounded .banner-with-cards .hasProds > div:first-of-type {
+    margin-left: 0;
+  }
 }
 
 @media (width <= 768px) {
@@ -632,9 +641,5 @@
 
   .section.banner-with-cards-container .banner-with-cards.edeka .prodBox-wrapper {
     margin-top: 25px;
-  }
-  
-  .section.banner-with-cards-container.rounded .banner-with-cards {
-    background: none !important;
   }
 }
